:bug: over flow text
helped with overflowed text

--- a/assets/product.css
+++ b/assets/product.css
@@ -200,7 +200,7 @@
     grid-column: 2/-1;
     grid-row: 12/16;
     padding-left: 70px;
-    padding-right: 230px;
+    padding-right: 80px;
   }
 
   .plus {
